20160602 CHANGELOG.txt created.
20160602 ./api/README.txt added.
20160602 ./api/api-dump.sh added.
20160602 ./watchlist/hia-iplist.sh added.
20160604 ./HOWTO.txt added.
20160604 ./api/api-update.sh added.
20160604 ./HOWTO.txt updated.
20160604 ./HOWTO.txt updated.
20160604 ./README.txt updated.